--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <footer class="container">
       <h2 id="result-item"></h2>
-      <h5>Made by Tulsi Tetyal</h5>
+      <h5>Made by Abhinav</h5>
     </footer>
 
     <script src="index.js"></script>
